--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Restaurant Template</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -52,6 +52,6 @@
   </div>
 </section>
 
-<script src="script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
